--- a/css/scss.css
+++ b/css/scss.css
@@ -408,6 +408,10 @@ footer .container .footer_footer .footer_text p {
   display: none;
 }
 
+.text {
+  display: none;
+}
+
 @media screen and (min-width: 768px) {
   header {
     background-image: url(/image/Vector\ 1.png);
