--- a/css/scss.scss
+++ b/css/scss.scss
@@ -476,7 +476,9 @@ footer {
 .footer_footer_2 {
     display: none;
 }
-
+.text{
+    display: none;
+}
 @media screen and (min-width: 768px) {
     header {
         background-image: url(/image/Vector\ 1.png);
